--- a/common/css/header.css
+++ b/common/css/header.css
@@ -205,7 +205,7 @@ border-bottom: 1px solid #fff;
 header #gnav .gnav-inner .gnav-nav > li > .gnav-nav-sub {
 }
 header #gnav .gnav-inner .gnav-nav > li > .gnav-nav-sub > ul {
-background:#ddd;
+background: #ddd;
 }
 header #gnav .gnav-inner .gnav-nav > li > .gnav-nav-sub > ul > li {
 }
@@ -354,6 +354,7 @@ overflow: hidden;
 }
 header #gnav .gnav-inner .gnav-nav > li > .gnav-nav-sub > ul > li {
 width: 25%;
+margin: 0;
 }
 header #gnav .gnav-inner .gnav-nav > li > .gnav-nav-sub > ul > li > a {
 display: flex;
