--- a/common/css/header.css
+++ b/common/css/header.css
@@ -1,17 +1,29 @@
 @charset "utf-8";
+/*////////////////////////////////////////////////////////////////////
+
+端末共通
+
+////////////////////////////////////////////////////////////////////*/
 header {
 position: fixed;
 width: 100%;
 top: 0;
 left: 0;/* z-index 順序管理 setting.cssで設定 */
 }
+/*--------------------------------------------------------------------
+.sticky
+--------------------------------------------------------------------*/
+header.sticky {
+}
 
 /*////////////////////////////////////////////////////////////////////
+
 スマホ版
+
 ////////////////////////////////////////////////////////////////////*/
 @media screen and (max-width: 1240px) {
 #container {
-padding-top: 54px;
+/*padding-top: 54px;*/
 }
 header .pc {
 display: none !important;
@@ -57,15 +69,22 @@ top: 0;
 left: 0;
 width: 100%;
 height: 54px;
-background: #fff;
-}
-header::after { /* 背景色設定 */
+transition: 0.6s cubic-bezier(0.000, 0.720, 0.290, 1);
 }
 /*--------------------------------------------------------------------
 gnavOpen
 --------------------------------------------------------------------*/
 .gnavOpen header {
 min-height: 100%;
+}
+/*--------------------------------------------------------------------
+sticky
+--------------------------------------------------------------------*/
+header.sticky::after {
+background:#fff;
+}
+header.sticky.hide {
+top: -54px;
 }
 /*////////////////////////////////////////////////////////////////////
 hd-logo
@@ -238,11 +257,13 @@ border-bottom: 1px solid #fff;
 }
 
 /*////////////////////////////////////////////////////////////////////
+
 PC版
+
 ////////////////////////////////////////////////////////////////////*/
 @media screen and (min-width: 1240px) {
 #container {
-padding-top: 75px;
+/*padding-top: 75px;*/
 }
 /*////////////////////////////////////////////////////////////////////
 header
@@ -251,7 +272,7 @@ header {
 height: 75px;
 display: flex;
 justify-content: space-between;
-background: #fff;
+transition: 0.6s cubic-bezier(0.000, 0.720, 0.290, 1);
 }
 header > * {
 margin: 0;
@@ -263,6 +284,15 @@ header .pc-space {
 content: "";
 display: inline;
 padding-left: 1em;
+}
+/*--------------------------------------------------------------------
+.sticky
+--------------------------------------------------------------------*/
+header.sticky {
+background: #fff;
+}
+header.sticky.hide {
+top: -75px;
 }
 /*////////////////////////////////////////////////////////////////////
 hd-logo
@@ -277,7 +307,7 @@ align-items: center;
 height: 100%;
 position: relative;
 padding: 10px 25px;
-font-size: 1.3rem;
+font-size: 2.4rem;
 font-weight: 600;
 }
 /*////////////////////////////////////////////////////////////////////
